# esp-glow

./: .gitignore  FORMAT.md  GRAMMAR_REFERENCE.md  Makefile  README.md  README_CONTROL_QUEUE.md  README_FIRMWARE.md  README_LIVE_CONTROL.md  README_LUA_FENNEL.md  README_PIXEL_MATRIX.md  README_PROVISION.md  README_PROVISIONER.md  README_SHOW_CONTROL.md  README_WEB_CONSOLE.md  README_WLED.md  README_WLED_UDP.md  UPLOAD_INSTRUCTIONS.txt  aim.cpp  aim.d  aim.h  apply_loaded_show.cpp  apply_loaded_show.d  apply_loaded_show.h  artnet_discovery.cpp  artnet_discovery.h  artnet_discovery_task.cpp  artnet_discovery_task.h  artnet_nodes_web.cpp  artnet_nodes_web.h  artnet_router.cpp  artnet_router.h  artnet_sink.cpp  artnet_sink.h  beat_clock.cpp  beat_clock.d  beat_clock.h  beat_queue.cpp  beat_queue.h  beat_queue_freertos.cpp  color.cpp  (+231 more)
.github/workflows/: firmware.yml  host-tests.yml  hygiene.yml  provisioner.yml  qemu-boot.yml
docs/: architecture.md  authoring.md  bring-up.md  grammar.md  index.md  reference.md
docs/interactive/: demo-walkthrough.html  demo-walkthrough.js
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.qemu.defaults  sdkconfig.selftest.defaults
firmware/components/glow_core/: CMakeLists.txt  idf_component.yml
firmware/components/lua/: CMakeLists.txt
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  led_status.cpp  led_status.h  main.cpp  render_task.cpp  render_task.cpp.rej  render_task.h  render_task.h.rej  storage_manager.cpp  storage_manager.h  wifi_manager.cpp  wifi_manager.h
firmware/main/data/: show.shw1
firmware/main/data/console/: app.js  devcfg-page.js  devcfg.html  index.html  script-panel.js
patches/: phase-F0-scaffold.patch  phase-F1-dmx-render.patch  phase-F2-wifi-artnet.patch  phase-F3-load-show.patch
samples/: apc40-original.mdef  apc40.mdef  demo-boot.fnl  demo.show  dimmer.fdef  head.fdef  wled-demo.show
scripts/: build_sample_bundle.sh  fix_makefile_f3.py  fix_makefile_f4.py  fix_makefile_tabs.py  test-ws-client.mjs  vendor_editor_bundle.sh  vendor_fennel.sh  vendor_littlefs_image_wasm.sh  vendor_lua.sh  vendor_wasmoon.sh
tests/hil/: IMPLEMENTATION.md  README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_hil_tests.sh  test_l0_boot.py  test_l1_dmx.py  test_l2_artnet.py  test_l3_show_load.py  test_l4_inputs.py  test_l5_fennel_repl.py  test_l5_soak.py  test_l6_ota_robustness.py  test_l6_safety.py  test_l7_soak.py  test_l8_ota_robustness.py
tests/hil/fixtures/: bundle_a.show  bundle_b.show
tests/qemu/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_qemu_tests.sh  test_l0_boot.py  test_l1_devcfg.py
tests/shared/: __init__.py  devcfg.py  line_reader.py  telemetry.py
tools/: generate_wled_maps.py
web/: dev-server.js
web/console/: app.js  devcfg-page.js  index.html  styles.css  test-reconcile.mjs  ws-client.js
web/littlefs-image/: dump_fixed_image.c  freestanding_impl.c  run_wasm_dump.mjs  shim.c
web/littlefs-image/freestanding/: inttypes.h  string.h
web/provision-wasm/: build-wasm.sh  smoke-test-wasm.mjs  wasm-glue.cpp
web/provisioner-static/: app.js  boot-image.js  fennel-check.js  flash.js  import.js  index.html  static-server.js  styles.css  test-fennel-check.mjs
web/shared/: devcfg.js  device-sync.js  fennel-editor.js  kv-indexeddb-adapter.js  kv-memory-adapter.js  project-model.js  project-store.js  project-zip.js  test-devcfg.mjs  test-device-sync.mjs  test-project-model.mjs  test-project-store.mjs  test-project-zip.mjs  ws-client.js  zip-writer.js
web/shared/importers/: gdtf.js  model.js  ofl.js  qlcplus.js  test-importers.mjs  xml-lite.js  zip-lite.js
web/shared/importers/testdata/: NOTICE.md
web/shared/importers/testdata/gdtf/: ESP-Glow@Test-Beam.gdtf  led-par-64-rgbw.gdtf
